# gateway-proxy-rs

./: .gitignore  CLAUDE.md  Cargo.toml  config.toml
.claude/skills/html-style/: SKILL.md
common/: Cargo.toml
common/src/: config.rs  error_inject.rs  lib.rs  models.rs  truncate.rs
db/: Cargo.toml
db/src/: filters.rs  lib.rs  requests.rs  sessions.rs
migrations/: 001_init.sql  002_add_response.sql  003_add_tls_verify_disabled.sql  004_add_system_filters.sql  005_add_auth_header.sql  0_init.sql  1_session_profile.sql  2_error_inject.sql  3_websearch_intercept.sql  4_websearch_request_data.sql  5_websearch_rounds.sql  6_websearch_whitelist.sql  7_webfetch_intercept.sql  8_configurable_tool_names.sql  init.sql
pages/: Cargo.toml
pages/src/: error_inject.rs  filters.rs  home.rs  intercept.rs  lib.rs  requests.rs  session_show.rs  sessions.rs  webfetch.rs
pages/src/detail/: common.rs  messages.rs  mod.rs  sse.rs  system.rs  tools.rs  webfetch.rs
proxy/: Cargo.toml
proxy/src/: bedrock.rs  filter.rs  lib.rs  shared.rs  sse.rs  websearch.rs
proxy/src/webfetch/: approval.rs  extract.rs  fetch.rs  mock.rs  mod.rs
server/: Cargo.toml
server/src/: handlers.rs  main.rs
server/src/handlers/: error_inject.rs  filters.rs  intercept.rs  mod.rs  proxy.rs  requests.rs  sessions.rs  webfetch.rs  websearch.rs
server/src/pages/: error_inject.rs  filters.rs  home.rs  mod.rs  requests.rs  session_show.rs  sessions.rs  websearch.rs
server/src/pages/detail/: common.rs  messages.rs  mod.rs  sse.rs  system.rs  tools.rs  websearch.rs
src/: db.rs  main.rs  models.rs  proxy.rs
src/pages/: dashboard.rs  detail.rs  home.rs  mod.rs  requests.rs  session_show.rs  sessions.rs
templates/: Cargo.toml
templates/src/: lib.rs
