[package]
name = "gateway-proxy-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
leptos = { version = "0.7", features = ["ssr"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
