[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
db = { path = "../db" }
actix-web = "4"
reqwest = { version = "0.12", features = ["rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
