[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
db = { path = "../db" }
actix-web = "4"
reqwest = { version = "0.13", features = ["rustls", "stream"] }
futures = "0.3"
bytes = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
log = "0.4"
regex = "1"
base64 = "0.22"
crc32fast = "1"
