[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
db = { path = "../db" }
proxy = { path = "../proxy" }
actix-web = "4"
leptos = { version = "0.7", features = ["ssr"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
anyhow = "1"
