[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
db = { path = "../db" }
proxy = { path = "../proxy" }
templates = { path = "../templates" }
actix-web = "4"
leptos = { version = "0.8", features = ["ssr"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.13", features = ["rustls"] }
serde_json = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
env_logger = "0.11"
log = "0.4"
